lego/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-tls
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: wsgapi
spec:
  tls:
  - hosts:
    - wsgapi.msroed.io
    secretName: wsgapi-tls
  rules:
  - host: wsgapi.msroed.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: api
          servicePort: 8001
